--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <canvas class="webgl"></canvas>
     <div class="scores">
     </div>
-    <script src="main.js" type="module"></script>
+    <script src="./three/three.min.js"></script>
+    <script src="./three/OrbitControls.js"></script>
+    <script src="./three/THREE.MeshLine.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
