Add fps environment and crosshair

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="scores">
     </div>
     <script src="./three/three.min.js"></script>
+    <script src="PointerLockControls.js"></script>
     <script src="./three/OrbitControls.js"></script>
     <script src="./three/THREE.MeshLine.js"></script>
     <script src="main.js"></script>
