--- a/index.html
+++ b/index.html
@@ -5,15 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThreeJS PatternLab</title>
     <link href="style.css" rel="stylesheet">
+    <style>
+        #blocker {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,1);
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+        }
+
+        #instructions {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            text-align: center;
+            font-size: 14px;
+            cursor: pointer;
+        }
+        #mainmenu {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            right: 0;
+            top: 300px;
+            bottom: 0;
+            color: aliceblue;
+            user-select: none;
+        }
+        .hover:hover {
+            user-select: none;
+            color: yellow;
+        }
+        #scores {
+            position: absolute;
+            text-align: center;
+            color: rgb(255, 101, 101);
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            font-size: x-large;
+        }
+    </style>
 </head>
 <body>
     <canvas class="webgl"></canvas>
-    <div class="scores">
+    <div id="scores">
+        <h3>Your Score: </h3>
+    </div>
+    <div id="blocker">
+        <div id="instructions">
+        </div>
+        <!-- <div id="gameover">
+            <h1 style="text-align: center;">Game Over</h1>
+            <h3>Your Score : </h3>
+        </div> -->
+    </div>
+    <div style="text-align: center;" id="mainmenu">
+        <h1>Main Menu</h1>
+        <h2>Choose Difficulties</h2>
+        <h2 id="easy" class="hover">Easy</h2>
+        <h2 id="medium" class="hover">Medium</h2>
+        <h2 id="hard" class="hover">Hard</h2>
     </div>
     <script src="./three/three.min.js"></script>
     <script src="PointerLockControls.js"></script>
     <script src="./three/OrbitControls.js"></script>
     <script src="./three/THREE.MeshLine.js"></script>
+    <script src="TextGeometry.js"></script>
+    <script src="./three/FontLoader.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
