--- a/index.html
+++ b/index.html
@@ -16,26 +16,13 @@
             top: 0;
             bottom: 0;
         }
-
-        #instructions {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-
-            text-align: center;
-            font-size: 14px;
-            cursor: pointer;
-        }
         #mainmenu {
             position: absolute;
             width: 100%;
-            height: 100%;
+            height: 50%;
             left: 0;
             right: 0;
-            top: 300px;
+            top: 25%;
             bottom: 0;
             color: aliceblue;
             user-select: none;
@@ -54,20 +41,36 @@
             bottom: 0;
             font-size: x-large;
         }
+        #scoresvalue {
+            position: absolute;
+            text-align: center;
+            color: rgb(255, 101, 101);
+            left: 0;
+            right: 0;
+            top: 40px;
+            bottom: 0;
+            font-size: x-large;
+        }
+        #gameover{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            right: 0;
+            top: 300px;
+            bottom: 0;
+            color: aliceblue;
+            user-select: none;
+        }
     </style>
 </head>
 <body>
     <canvas class="webgl"></canvas>
     <div id="scores">
         <h3>Your Score: </h3>
+        <h3 id="scoresvalue"></h3>
     </div>
     <div id="blocker">
-        <div id="instructions">
-        </div>
-        <!-- <div id="gameover">
-            <h1 style="text-align: center;">Game Over</h1>
-            <h3>Your Score : </h3>
-        </div> -->
     </div>
     <div style="text-align: center;" id="mainmenu">
         <h1>Main Menu</h1>
@@ -75,6 +78,10 @@
         <h2 id="easy" class="hover">Easy</h2>
         <h2 id="medium" class="hover">Medium</h2>
         <h2 id="hard" class="hover">Hard</h2>
+    </div>
+    <div id="gameover">
+        <h1 style="text-align: center;">Game Over</h1>
+        <h3 style="text-align: center;" id="finalscore">Your Score: </h3>
     </div>
     <script src="./three/three.min.js"></script>
     <script src="PointerLockControls.js"></script>
