Adding Try Again at GameOver Scene
Adding Try Again at GameOver Scene, refresh the page and play the game again

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="gameover">
         <h1 style="text-align: center;">Game Over</h1>
         <h3 style="text-align: center;" id="finalscore">Your Score: </h3>
+        <h2 style="text-align: center;" id="tryagain" class="hover">Try Again</h2>
     </div>
     <script src="./three/three.min.js"></script>
     <script src="PointerLockControls.js"></script>
