--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="scores">
         <h3>Your Score: </h3>
         <h3 id="scoresvalue"></h3>
+        <h3>Time: </h3>
+        <h3 id="timer"></h3>
     </div>
     <div id="blocker">
     </div>
@@ -24,6 +26,7 @@
     <div id="gameover">
         <h1 style="text-align: center;">Game Over</h1>
         <h3 style="text-align: center;" id="finalscore">Your Score: </h3>
+        <h3 style="text-align: center;" id="finaltime">Your Time: </h3>
         <h2 style="text-align: center;" id="tryagain" class="hover">Try Again</h2>
     </div>
     <script src="./three/three.min.js"></script>
