add logo and "how to play"

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     <div id="blocker">
     </div>
     <div style="text-align: center;" id="mainmenu">
+        <h1><img src="assets/MPL_LOGO.png" style="width:180px"><h1>MEMORY PATTERN LAB</h1></h1>
         <h1>Main Menu</h1>
         <h2>Choose Difficulties</h2>
         <h2 id="easy" class="hover">Easy</h2>
         <h2 id="medium" class="hover">Medium</h2>
         <h2 id="hard" class="hover">Hard</h2>
+        <br></br>
+        <h2>How To Play :</h2>
+        <h2>The game will give you a pattern, try to memorize it.</h2>
+        <h2>Move your mouse <img src="assets/Click-and-Drag-Middle-Button.gif" style="width:50px"> to move your camera.</h2>
+        <h2>Left-click <img src="assets/left-click.png" style="width:30px"> to connect the points to form the given pattern</h2>
     </div>
     <div id="gameover">
         <h1 style="text-align: center;">Game Over</h1>
