--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
     </div>
     <div id="gameoverBlocker">
     </div>
-    <div style="text-align: center;" id="mainmenu">
-        <h1 class=" skewed" style="font-size: 50px;">Main Menu</h1>
-        <h2 class=" skewed" style="font-size: 40px;">Choose Difficulties</h2>
-        <h2 id="easy" class="hover level-skewed" style="font-size: 30px;">Easy</h2>
-        <h2 id="medium" class="hover level-skewed" style="font-size: 30px;">Medium</h2>
-        <h2 id="hard" class="hover level-skewed" style="font-size: 30px;">Hard</h2>
+    <div class="" style="text-align: center;" id="mainmenu">
+        <!-- <h1><img src="assets/MPL_LOGO.png" style="width:180px"></h1> -->
+        <h1 class="" style="font-size: 40px;">MEMORY PATTERN LAB</h1>
+        <h1 class="" style="font-size: 40px;">Main Menu</h1>
+        <h2 class="" style="font-size: 30px;">Choose Difficulties</h2>
+        <h2 id="easy" class="hover" style="font-size: 30px;">Easy</h2>
+        <h2 id="medium" class="hover" style="font-size: 30px;">Medium</h2>
+        <h2 id="hard" class="hover" style="font-size: 30px;">Hard</h2>  
+        <h2 class="" style="font-size: 20px;">How To Play :</h2>
+        <h2 class="" style="font-size: 15px;">The game will give you a pattern, try to memorize it.</h2>
+        <h2 class="" style="font-size: 15px;">Move your mouse <img src="./assets/Click-and-Drag-Middle-Button.gif" style="width:50px"> to move your camera.</h2>
+        <h2 class="" style="font-size: 15px;">Left-click <img src="./assets/left-click.png" style="width:30px"> to connect the points to form the given pattern</h2>
     </div>
     <div id="gameover">
         <h1 style="text-align: center;">Game Over</h1>
