add music background

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <h3 style="text-align: center;" id="finaltime">Your Time: </h3>
         <h2 style="text-align: center;" id="tryagain" class="hover">Try Again</h2>
     </div>
+
+    <audio autoplay loop src="./assets/Thinking-Background.wav"></audio>
+
     <script src="./three/three.min.js"></script>
     <script src="PointerLockControls.js"></script>
     <script src="./three/OrbitControls.js"></script>
