--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     </div>
     <div id="gameoverBlocker">
     </div>
+    <div id=logo>
+        <img src="assets/MPL_LOGO.png" style="width:180px">
+    </div>
     <div class="" style="text-align: center;" id="mainmenu">
-        <!-- <h1><img src="assets/MPL_LOGO.png" style="width:180px"></h1> -->
         <h1 class="" style="font-size: 40px;">MEMORY PATTERN LAB</h1>
         <h1 class="" style="font-size: 40px;">Main Menu</h1>
         <h2 class="" style="font-size: 30px;">Choose Difficulties</h2>
