fix audio and logo issues on medium and hard level

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2 style="text-align: center;" id="tryagain" class="hover">Try Again</h2>
     </div>
 
-    <audio preload="true" loop="true" autoplay="true">
+    <audio id="audioplayer" type="audio" loop="true">
         <source src="./assets/Thinking-Background.wav">
     </audio>
 
